--- a/package.json
+++ b/package.json
@@ -40,5 +40,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "https://springboot-backend-v1.herokuapp.com/"
 }
