--- a/package.json
+++ b/package.json
@@ -41,5 +41,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://springboot-backend-v1.herokuapp.com/"
+  "proxy": "http://localhost:8080"
 }
